apps/k8s/knarr/qbittorrent/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: qbit-ingress
  namespace: knarr
  annotations:
    kubernetes.io/ingress.class: traefik
    external-dns.alpha.kubernetes.io/target: "14dba35c-b082-4cf5-8319-05b87f07357c.cfargotunnel.com"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "qBittorrent"
    gethomepage.dev/group: "Downloads"
    gethomepage.dev/icon: "qbittorrent.png"
    gethomepage.dev/description: "Torrent downloader (VPN)"
spec:
  rules:
  - host: qbit.yggdrasil.rip
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: qbittorrent
            port:
              number: 80
